# Install Python files and version
py.install_sources(
    '__init__.py',
    'VERSION',
    subdir: 'pydgq',
)

# TODO: Install data file after pickle→npz migration (step 5)
# py.install_sources(
#     'pydgq_data.npz',
#     subdir: 'pydgq',
# )

subdir('solver')
subdir('utils')
# subdir('examples')  # TODO: add after test migration (step 6)
